docs: write readmes

--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "js-template",
+  "name": "@wnfs-wg/nest-root",
   "version": "0.0.0",
   "private": true,
-  "workspaces": [
-    "packages/*",
-    "examples/*"
-  ],
+  "workspaces": ["packages/*", "examples/*"],
   "packageManager": "pnpm@8.6.1",
   "engines": {
     "node": ">=18"
@@ -40,11 +37,7 @@
   },
   "prettier": "@fission-codes/eslint-config/prettier.config.js",
   "eslintConfig": {
-    "extends": [
-      "@fission-codes"
-    ],
-    "ignorePatterns": [
-      "docs"
-    ]
+    "extends": ["@fission-codes"],
+    "ignorePatterns": ["docs"]
   }
 }
