--- a/packages/nest/package.json
+++ b/packages/nest/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "package1",
+  "name": "@wnfs-wg/nest",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Example package description.",
   "author": "Steven Vandevelde <icid.asset@gmail.com> (tokono.ma)",
   "license": "(Apache-2.0 AND MIT)",
