--- a/examples/demo/package.json
+++ b/examples/demo/package.json
@@ -15,16 +15,23 @@
     "serve": "vite preview --port 3000"
   },
   "dependencies": {
-    "@wnfs-wg/nest": "file:../../packages/nest"
+    "@wnfs-wg/nest": "workspace:../../packages/nest",
+    "blockstore-idb": "^1.1.6",
+    "uint8arrays": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.5",
     "@types/node": "^20.10.4",
     "typescript": "5.2.2",
-    "vite": "^5.0.7"
+    "vite": "^5.0.7",
+    "vite-plugin-wasm": "^3.3.0"
   },
   "eslintConfig": {
-    "extends": ["@fission-codes"],
-    "ignorePatterns": ["dist"]
+    "extends": [
+      "@fission-codes"
+    ],
+    "ignorePatterns": [
+      "dist"
+    ]
   }
 }
