--- a/.github/workflows/nest.yml
+++ b/.github/workflows/nest.yml
@@ -1,4 +1,4 @@
-name: Package1
+name: 'Nest Package'
 env:
   CI: true
   FORCE_COLOR: 1
@@ -6,13 +6,13 @@ on:
   push:
     branches: [main]
     paths:
-      - 'packages/package1/**'
-      - .github/workflows/package1.yml
+      - 'packages/nest/**'
+      - .github/workflows/nest.yml
       - pnpm-lock.yaml
   pull_request:
     paths:
-      - 'packages/package1/**'
-      - .github/workflows/package1.yml
+      - 'packages/nest/**'
+      - .github/workflows/nest.yml
       - pnpm-lock.yaml
 jobs:
   test:
@@ -28,6 +28,6 @@ jobs:
           cache: pnpm
       - run: pnpm install
       - run: pnpm run build
-      - run: pnpm -r --filter package1 run lint
-      - run: pnpm -r --filter package1 run test
-      - run: pnpm -r --filter package1 exec depcheck
+      - run: pnpm -r --filter nest run lint
+      - run: pnpm -r --filter nest run test
+      - run: pnpm -r --filter nest exec depcheck
