chore: fix lint errors and housekeeping

--- a/examples/demo/package.json
+++ b/examples/demo/package.json
@@ -27,7 +27,11 @@
     "vite-plugin-wasm": "^3.3.0"
   },
   "eslintConfig": {
-    "extends": ["@fission-codes"],
-    "ignorePatterns": ["dist"]
+    "extends": [
+      "@fission-codes"
+    ],
+    "ignorePatterns": [
+      "dist"
+    ]
   }
 }
