--- a/packages/nest/package.json
+++ b/packages/nest/package.json
@@ -108,7 +108,6 @@
   "dependencies": {
     "@ipld/dag-pb": "^4.0.6",
     "compare-versions": "^6.1.0",
-    "debounce": "^2.0.0",
     "emittery": "^1.0.1",
     "interface-blockstore": "^5.2.7",
     "ipfs-unixfs": "^11.1.0",
@@ -116,6 +115,7 @@
     "ipfs-unixfs-importer": "^15.2.1",
     "it-all": "^3.0.4",
     "multiformats": "^12.1.3",
+    "p-debounce": "^4.0.0",
     "uint8arrays": "^5.0.0",
     "wnfs": "0.1.27"
   },
