--- a/packages/nest/package.json
+++ b/packages/nest/package.json
@@ -128,8 +128,7 @@
     "blockstore-core": "^4.3.8",
     "fast-check": "^3.14.0",
     "mocha": "^10.2.0",
-    "playwright-test": "^14.0.0",
-    "tsx": "^4.6.2"
+    "playwright-test": "^14.0.0"
   },
   "publishConfig": {
     "provenance": true
