Revert "chore: removed unused tsx dependency"
This reverts commit 371caff9ddeb915d2cc2b9c140506e72b50d8fad.

--- a/packages/nest/package.json
+++ b/packages/nest/package.json
@@ -128,7 +128,8 @@
     "blockstore-core": "^4.3.8",
     "fast-check": "^3.14.0",
     "mocha": "^10.2.0",
-    "playwright-test": "^14.0.0"
+    "playwright-test": "^14.0.0",
+    "tsx": "^4.6.2"
   },
   "publishConfig": {
     "provenance": true
