--- a/packages/nest/tsconfig.json
+++ b/packages/nest/tsconfig.json
@@ -9,6 +9,7 @@
   "include": ["src", "test"],
   "exclude": ["node_modules", "dist", "out"],
   "typedocOptions": {
+    "entryPointStrategy": "resolve",
     "entryPoints": ["src/index.ts"],
     "includeVersion": true,
     "excludeExternals": false,
