chore: fix lowercase README.md references

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,7 +22,7 @@
 
   "customizations": {
     "codespaces": {
-      "openFiles": ["readme.md"]
+      "openFiles": ["README.md"]
     },
     "vscode": {
       "extensions": [
