--- a/packages/nest/package.json
+++ b/packages/nest/package.json
@@ -62,19 +62,42 @@
   },
   "typesVersions": {
     "*": {
-      ".": ["dist/src/index"],
-      "app-info": ["dist/src/app-info"],
-      "class": ["dist/src/class"],
-      "crypto": ["dist/src/crypto"],
-      "errors": ["dist/src/errors"],
-      "events": ["dist/src/events"],
-      "path": ["dist/src/path"],
-      "transaction": ["dist/src/transaction"],
-      "types": ["dist/src/types"],
-      "version": ["dist/src/version"]
+      ".": [
+        "dist/src/index"
+      ],
+      "app-info": [
+        "dist/src/app-info"
+      ],
+      "class": [
+        "dist/src/class"
+      ],
+      "crypto": [
+        "dist/src/crypto"
+      ],
+      "errors": [
+        "dist/src/errors"
+      ],
+      "events": [
+        "dist/src/events"
+      ],
+      "path": [
+        "dist/src/path"
+      ],
+      "transaction": [
+        "dist/src/transaction"
+      ],
+      "types": [
+        "dist/src/types"
+      ],
+      "version": [
+        "dist/src/version"
+      ]
     }
   },
-  "files": ["dist", "src"],
+  "files": [
+    "dist",
+    "src"
+  ],
   "scripts": {
     "lint": "tsc --build && eslint . --quiet --ignore-pattern='README.md' && prettier --check '**/*.{js,ts,yml,json}' --ignore-path ../../.gitignore",
     "build": "tsc --build",
@@ -112,11 +135,15 @@
     "provenance": true
   },
   "eslintConfig": {
-    "extends": ["@fission-codes"],
+    "extends": [
+      "@fission-codes"
+    ],
     "env": {
       "mocha": true
     },
-    "ignorePatterns": ["dist"],
+    "ignorePatterns": [
+      "dist"
+    ],
     "rules": {
       "@typescript-eslint/no-unused-vars": [
         "error",
@@ -126,11 +153,18 @@
           "varsIgnorePattern": "^_"
         }
       ],
-      "unicorn/no-array-reduce": ["off"]
+      "unicorn/no-array-reduce": [
+        "off"
+      ]
     }
   },
   "depcheck": {
-    "specials": ["bin"],
-    "ignores": ["@types/*", "assert"]
+    "specials": [
+      "bin"
+    ],
+    "ignores": [
+      "@types/*",
+      "assert"
+    ]
   }
 }
