--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
   "devDependencies": {
     "@fission-codes/eslint-config": "^0.1.0",
     "depcheck": "^1.4.7",
-    "lint-staged": "^15.2.0",
-    "prettier": "3.1.1",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
     "simple-git-hooks": "^2.9.0",
     "typedoc": "^0.25.8",
-    "typedoc-plugin-missing-exports": "^2.1.0",
+    "typedoc-plugin-missing-exports": "^2.2.0",
     "typedoc-plugin-rename-defaults": "^0.7.0",
     "typedoc-plugin-zod": "^1.1.2",
     "typescript": "5.3.3"
